2015-10-10  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* defaults.h (DYNAMIC_CHAIN_ADDRESS): New default definition.
	* builtins.c (expand_builtin_return_addr): Adjust.

2015-10-10  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* defaults.h (SETUP_FRAME_ADDRESSES): New default definition.
	* builtins.c (expand_builtin_return_addr): Adjust.
	* doc/tm.texi: Likewise.
	* doc/tm.texi.in: Likewise.
	* except.c (expand_builtin_unwind_init): Likewise.

2015-10-10  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>

	* builtins.c (expand_builtin_return_addr): Adjust.
	* defaults.h (INITIAL_FRAME_ADDRESS_RTX): New default definition.

2015-10-10  Jan Hubicka  <hubicka@ucw.cz>

	* tree.c (type_with_interoperable_signedness): New.
	(gimple_canonical_types_compatible_p): Use it.
	* tree.h (type_with_interoperable_signedness): Declare

2015-10-10  Jan Hubicka  <hubicka@ucw.cz>

	* fold-const.c (operand_equal_p): Document OEP_ADDRESS_OF
	and OEP_CONSTANT_ADDRESS_OF; skip type compatibility checks
	when OEP_ADDRESS_OF is se.

2015-10-10  Aditya Kumar  <aditya.k7@samsung.com>
	    Sebastian Pop  <s.pop@samsung.com>

	* graphite-dependences.c (scop_get_dependences): Add dump of the
	data dependence graph.
	* graphite-poly.c (print_isl_union_map): New.
	(debug_isl_union_map): New.
	* graphite-poly.h (print_isl_union_map): Declare.
	(debug_isl_union_map): Declare.

2015-10-10  Aditya Kumar  <aditya.k7@samsung.com>
	    Sebastian Pop  <s.pop@samsung.com>

	* graphite-poly.c (print_iteration_domain): Remove verbosity.
	Remove OpenScop formatting.
	(print_iteration_domains): Same.
	(debug_iteration_domain): Same.
	(debug_iteration_domains): Same.
	(print_pdr): Same.
	(debug_pdr): Same.
	(dump_gbb_cases): Same.
	(dump_gbb_conditions): Same.
	(print_pdrs): Same.
	(debug_pdrs): Same.
	(print_pbb_body): Same.
	(print_pbb): Same.
	(print_scop_params): Same.
	(print_scop_context): Same.
	(print_scop): Same.
	(debug_pbb_domain): Same.
	(debug_pbb): Same.
	(debug_scop_context): Same.